changed shipping and deliveries

--- a/Landing Pages/shipping_and_deliveries.html
+++ b/Landing Pages/shipping_and_deliveries.html
@@ -20,24 +20,30 @@ p{
 
 <h2 id="shipping">Shipping & Deliveries</h2>
 
-<p class="scrollLink"><a href="/help?target=innerNav">Top</a></p>
 
 
 <h3>Same-Day Shipping</h3>
-
 <p>We strive to make ordering from True Fabrications as fast and easy as possible.  Place your order before 3:00 PM Pacific Time and we&#39ll ship it the same day.</p>
 
 <h3>Best Price</h3>
-
 <p>We guarantee our customers the best of the best, at the best price on the market.  If you see the same product offered anywhere else for less, that's the price you'll pay with us.</p>
+
+<h3>Free Backorder Shipping</h3>
+<p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
+
+<h3>100% satisfaction</h3>
+<p>We stand behind every single one of our products with a 100% satiscaction policy unmatched in the industry.  Not only do we accept returns and exchanges without question, we will buy back any item that doesn't sell in your store, no matter the reason, and replace it with something that will.  What's more?  We'll pay the shipping.</p>
+
+<h3>Shipping Times</h3>
+<p>Curious about when your order will arrive?  We ship everyting from Renton, WA, zip code 98057.  The majority of orders are shipped via UPS, unless otherwise specified, and you can check out Ground Time-in-Transit Maps here <a href="http://www.ups.com/maps/results">https://www.ups.com/maps/results</a>.</p>
+<p>Of course, we're happy to provide tracking for any order, just give us a call!</p>
 
 
 <h2 id="returns">Returns & Exchanges</h2>
 
-<p class="scrollLink"><a href="/help?target=innerNav">Top</a></p>
 
 <p>We dedicate ourselves to the customer experience with a 100% Satisfaction Guarantee unmatched in the industry.  If your product was damaged in shipping, has a quality issue, or isn't selling as quickly as you'd hoped - even if you simply changed your  mind about it - we'll take it back without question and replace it with something better.  Just log into your account and fill out the return from and one of our team members will be in touch with you shortly.  If immediate assistance is more convenient for you, please feel free to chat with us live or give us a call at 800.750.8783.</p>
 <p>Please note that we take the quality of our products very seriously.  If you received a product with damage or a quality issue, we want to hear about it.  If possible, please attach a picture below to assist us in properly addressing the issue.</p>
-<br /><p class="scrollLink"><a href="/help?target=innerNav">Top</a></p>
+<br />
 </section>
 
