added all the new pages and updates

--- a/Landing Pages/faq.html
+++ b/Landing Pages/faq.html
@@ -1,23 +1,12 @@
-<style>
-h2{
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
+<head>
+<link rel="stylesheet" href="http://tf.production.na1.netsuitestaging.com/assets/tf-styles/landingPages.css"></link>
 
-h3{
-  font-size: 1.5em;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
 
-p{
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-</style>
-<section id="tfBodyText">
-
-  <h2 id="faq">Frequently Asked Questions</h2>
+<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+</head>
+<body>
+<div class="tfBodyText">
+<section id="faq">
 
   <h3>Okay, I've braced myself - What are your minimums?</h3>
   <p>True has no minimum order requirements.</p>
@@ -86,3 +75,5 @@ p{
   <p>"I don't really have a reason."</p>
   <p>We accept returns and exchanges at any time with no questions asked.  And if a product doesn't sell at your store, for any reason, we'll buy it back and replace it with something that will.  Believe us when we say it: your satisfaction is our highest priority.</p>
 </section>
+</div>
+</body>
