added the guarantees file

--- a/Landing Pages/guarantee.html
+++ b/Landing Pages/guarantee.html
@@ -1,24 +1,76 @@
 <head>
+<title>
+Guarantees
+</title>
 <link rel="stylesheet" href="http://tf.production.na1.netsuitestaging.com/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
+<style type="text/css">
+
+#guaranteeContainer{
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+}
+
+.innerGuarantee{
+  vertical-align: top;
+  width: 18%;
+  min-width: 200px;
+  display: inline-block;
+}
+
+.innerGuarantee img{
+  width: 80%;
+}
+
+.innerGuarantee p{
+  padding-left: 10%;
+  width: 80%;
+}
+
+.innerGuarantee h3{
+  padding-left: 10%;
+  width: 80%;
+}
+
+</style>
+
+
 </head>
 <body>
 <div class="tfBodyText">
-<section id="guarantee">
-<h3>Best Price.</h3>
-<p>Our best price guarantee gives you every assurance that along with offering you a full selection of wine lifestyle products, we always provide you the best value in the market. If you find the same product for less somewhere else we will match their price.</p>
-
-<h3>100% Satisfaction.</h3>
-<p>We stand behind our products 100%. If a product is damaged or does not sell, do not worry. We will take it back or offer an exchange without question. We encourage you to try new products and provide your customers with fresh ideas to improve your profitability. We strive to make the whole process of supplying your store hassle free.</p>
-
-<h3>Orders Ship the Same Day.</h3>
-<p>
-If you place your order before 3:00 PM Pacific Time, we will ship your order the same day. We strive to make ordering from True Fabrications fast and easy as possible.</p>
-
-<h3>Free Backorder Shipping.</h3>
-<p>True Fabrications typically has an in-stock rate of 98% on over 2000 items. If you happen to order from us and we are out of stock of an item, don't fret, we offer Free Back Order Shipping! As soon as it's back in stock, we will ship that item to you with no shipping charges.</p>
+<section id="terms">
+<div id="guaranteeContainer">
+	<div class="innerGuarantee">
+    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/100Satisfaction_Icon.png" />
+    <h3>100% satisfaction</h3>
+    <p>We stand behind every single one of our products with a 100% satiscaction policy unmatched in the industry.  Not only do we accept returns and exchanges without question, we will buy back any item that doesn't sell in your store, no matter the reason, and replace it with something that will.  What's more?  We'll pay the shipping.</p>
+	</div>
+	<div class="innerGuarantee">
+    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/BestPrice_Icon.png" />
+    <h3>Best Price</h3>
+    <p>We guarantee our customers the best of the best, at the best price on the market.  If you see the same product offered anywhere else for less, that's the price you'll pay with us.</p>
+	</div>
+	<div class="innerGuarantee">
+    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/FastShipping_Icon.png" />
+    <h3>Same-Day Shipping</h3>
+    <p>We strive to make ordering from True Fabrications as fast and easy as possible.  Place your order before 3:00 PM Pacific Time and we&#39ll ship it the same day.</p>
+	</div>
+	<div class="innerGuarantee">
+    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/FreeBackorders_Icon.png" />
+    <h3>Free Backorder Shipping</h3>
+    <p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
+	</div>
+	<div class="innerGuarantee">
+    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/NoMinimums_Icon.png" />
+    <h3>No Minimums</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua.</p>
+	</div>
+</div>
 </section>
 </div>
 </body>
