--- a/Landing Pages/merchandising.html
+++ b/Landing Pages/merchandising.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div class="tfBodyText">
-<section id="marchandising">
+<section id="merchandising">
 
-True Fabrications carries over 350 unique products that can be imprinted for your store, business, or event. Whether you're on the market for promotional products, merchandise that adds value to your brand, or gifts for an uncoming event, we are here to help you with all of your needs. Don't have a logo? Our graphics team will help you create one! <BR><br> We eill email you a proof and total estimate within 48 hours! Please note that you are only sbmitting a request - your imprint will NOT go into production until you approve the proof. Feel free to check the customization section of our catalog for full pricing. <BR><br> For Questions <BR><br>Call us at (0800) 750-8783 | Email us at custom@truefabrications.com<BR><br>   
+True Fabrications carries over 350 unique products that can be imprinted for your store, business, or event. Whether you're on the market for promotional products, merchandise that adds value to your brand, or gifts for an uncoming event, we are here to help you with all of your needs. Don't have a logo? Our graphics team will help you create one! <br><br> We eill email you a proof and total estimate within 48 hours! Please note that you are only sbmitting a request - your imprint will NOT go into production until you approve the proof. Feel free to check the customization section of our catalog for full pricing. <BR><br> For Questions <BR><br>Call us at (800) 750-8783 | Email us at <a href="mailto:info@truefabrications.com">info@truefabrications.com</a><BR><br>   
 <div class="cont-cells"> <div class="row-fluid"> 
 <div class="span4"><a href="/Merchandising/Counter-Top-Displays" data-hashtag="#/Merchandising/Counter-Top-Displays"><img src="/assets/images/content/example_merch_counter.jpg">Counter Top Displays</a></div> 
 <div class="span4"><a href="/Merchandising/Floor-Displays" data-hashtag="#/Merchandising/Floor-Displays"><img src="/assets/images/content/example_merch_floor.jpg">Floor Displays</a></div> 
