added catalog page and wholesaler page and updated the html files to match what is on the server

--- a/Landing Pages/guarantee.html
+++ b/Landing Pages/guarantee.html
@@ -1,8 +1,8 @@
 <head>
 <title>
-Guarantees
+True Fabrications | Guarantees
 </title>
-<link rel="stylesheet" href="http://tf.production.na1.netsuitestaging.com/assets/tf-styles/landingPages.css"></link>
+<link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -45,30 +45,29 @@ Guarantees
 <section id="terms">
 <div id="guaranteeContainer">
 	<div class="innerGuarantee">
-    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/100Satisfaction_Icon.png" />
+    <img src="/assets/images/content/CD_pages/100Satisfaction_Icon.png" />
     <h3>100% satisfaction</h3>
     <p>We stand behind every single one of our products with a 100% satiscaction policy unmatched in the industry.  Not only do we accept returns and exchanges without question, we will buy back any item that doesn't sell in your store, no matter the reason, and replace it with something that will.  What's more?  We'll pay the shipping.</p>
 	</div>
 	<div class="innerGuarantee">
-    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/BestPrice_Icon.png" />
+    <img src="/assets/images/content/CD_pages/BestPrice_Icon.png" />
     <h3>Best Price</h3>
     <p>We guarantee our customers the best of the best, at the best price on the market.  If you see the same product offered anywhere else for less, that's the price you'll pay with us.</p>
 	</div>
 	<div class="innerGuarantee">
-    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/FastShipping_Icon.png" />
+    <img src="/assets/images/content/CD_pages/FastShipping_Icon.png" />
     <h3>Same-Day Shipping</h3>
     <p>We strive to make ordering from True Fabrications as fast and easy as possible.  Place your order before 3:00 PM Pacific Time and we&#39ll ship it the same day.</p>
 	</div>
 	<div class="innerGuarantee">
-    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/FreeBackorders_Icon.png" />
+    <img src="/assets/images/content/CD_pages/FreeBackorders_Icon.png" />
     <h3>Free Backorder Shipping</h3>
-    <p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
+    <p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock, we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
 	</div>
 	<div class="innerGuarantee">
-    <img src="http://tf.production.na1.netsuitestaging.com/assets/images/content/CD_pages/NoMinimums_Icon.png" />
+    <img src="/assets/images/content/CD_pages/NoMinimums_Icon.png" />
     <h3>No Minimums</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p>Our no minimum policy gives customers the flexibility to try out new or popular products online 24 hours a day.</p>
 	</div>
 </div>
 </section>
