--- a/Landing Pages/jobs.html
+++ b/Landing Pages/jobs.html
@@ -1,5 +1,6 @@
 <head>
-<link rel="stylesheet" href="http://tf.production.na1.netsuitestaging.com/assets/tf-styles/landingPages.css"></link>
+<title>True Fabrications | Jobs at True</title>
+<link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
