--- a/Landing Pages/privacypolicy.html
+++ b/Landing Pages/privacypolicy.html
@@ -1,4 +1,5 @@
 <head>
+<title>True Fabrications | Privacy Policy</title>
 <link rel="stylesheet" href="http://tf.production.na1.netsuitestaging.com/assets/tf-styles/landingPages.css"></link>
 
 
@@ -7,6 +8,7 @@
 <body>
 <div class="tfBodyText">
 <section id="privacypolicy">
+
 <h2>Privacy Policy</h2>
 
 <p>True Fabrications, Inc. takes the protection and proper use of your personal information seriously. We respect your privacy, and take care to safeguard information in our possession.</p>
@@ -15,61 +17,52 @@
 
 <p>Finally, please note that this policy does not apply to other companies’ or organizations’ websites to which we link.</p>
 
-<p>If you have any questions about this Privacy Policy or the Site, please contact us by:</p>
+<p>If you have any questions about this Privacy Policy or the Site, please <a href="http://tf.production.na1.netsuitestaging.com/contact>contact">contact us</a>.</p>
 
-<ul>
-	<li>Sending an e-mail to consumer@truefabrications.com</li>
-	<li>Sending a written request to the following address:
-	<br /><br />
-	True Fabrications, Inc.<br />
-	Attn: Legal Department<br />
-	154 N 35<sub>th</sub>Street<br />
-	Seattle, WA 98103<br /></li>
-</ul>
-
-<h3>A SPECIAL NOTE ABOUT CHILDREN</h3>
+<h3>A Special Note About Children</h3>
 <p>Our Sites are not designed or intended for use by children under 13 and comply with the provisions of the Children’s On-Line Privacy Protection Act. If you are under 18, you should use our Sites only with involvement of a parent or guardian. Children under 13 may not submit any personally identifiable information to us, and if we discover that we have inadvertently gathered any such information from a child under 13, we will take appropriate steps to delete it.</p>
 
-<h3>WHAT PERSONAL INFORMATION DOES TRUE FABRICATIONS, INC. GATHER?</h3>
+<h3>What personal information does True Fabrications, Inc. gather?</h3>
 <p>The information we obtain from users helps us personalize and continually improve your shopping experience at our Sites. Here are the general types of information we gather:</p>
 
-<h3>Information You Give Us</h3>
+<h4>Information You Give Us</h4>
 <p>True Fabrications, Inc. receives and stores any information you provide to us during your order and registration process. Such information may include your name, shipping address, billing address, e-mail address, phone number, credit card number, shopping interests and preferences, transaction history, and other personal data (“Personal Information”). We collect Personal Information that is reasonably necessary to comply with your requests and with our legitimate business interests. You can choose not to provide certain information, but then you might not be able to participate in certain useful Site features.</p>
 
-<h3>Information Gathered Automatically</h3>
+<h4>Information Gathered Automatically</h4>
 <p>True Fabrications, Inc. receives and stores certain non-personal identifiable information when you visit our Sites. For example, like many websites, we use “cookies” and “clear gifs” to obtain certain types of information when your web browser accesses one of our Sites, or when you are provided the opportunity to complete surveys, participate in a sweepstakes or other incentives, or open or respond to any newsletter or other e-mail you may have requested.</p>
 <p>Examples of the information we collect and analyze in this manner include the Internet protocol (IP) address used to connect your computer to the Internet; computer and connection information such as browser type and version, operating system, and platform; your behavior on our Sites and related services, including the products you view or searched for, as well as the URL you come from and go to next (whether this URL is on our site or not). </p>
 <p>You are always free to decline our cookies if your browser permits, although in that case you may not be able to participate in our surveys or incentives, purchase products, or take advantage of certain useful Site features.</p>
 
-<h3>HOW WE USE PERSONAL INFORMATION</h3>
+<h3>How do we use personal information?</h3>
 <p>Information about Site users is an important part of our business and we take steps to maintain the privacy and security of such information against unauthorized access. We generally use such information for such purposes as customizing future shopping and savings opportunities for you, improving our services, and communicating with you if you have authorized such communication. If you currently receive our emails and do not wish to continue receiving them, please send an email to consumer@truefabrications.com.</p>
 
-<h3>Agents</h3>
+<h4>Agents</h4>
 <p>From time to time, we employ other companies and individuals to perform various functions on our behalf. Examples include fulfilling orders, delivering packages, sending postal mail and e-mail, removing repetitive information from customer lists, analyzing data, providing marketing assistance, providing search results and links (including paid listings and links), processing credit card payments, and providing customer service. They have access to personal information needed to perform their functions, but may not use it for other purposes.</p>
 
-<h3>Business Transactions</h3>
+<h4>Business Transactions</h4>
 <p>As True Fabrications, Inc. continues to develop our business; we might sell or buy stores, subsidiaries, or business units. In such transactions, customer information generally is one of the transferred business assets but remains subject to the promises made in any pre-existing Privacy Notice (unless, of course, the customer consents otherwise as described above). Also, in the unlikely event that True Fabrications, Inc. or substantially all of its assets are acquired, customer information will be one of the transferred assets.</p>
 
-<h3>Protection of True Fabrications, Inc. and Others</h3>
+<h4>Protection of True Fabrications, Inc. and Others</h4>
 <p>True Fabrications, Inc. releases account and other personal information when release is appropriate to comply with law; enforce or apply our Terms of Use and other agreements; assist in fraud protection or investigation; or protect the rights, property, or security of True Fabrications, Inc., our users, or others. True Fabrications, Inc. cooperates with law enforcement inquiries, as well as other third parties to enforce laws. Therefore, in response to a verified and legitimate request by law enforcement or other government officials relating to a criminal investigation or alleged illegal activity, we can (and you authorize us to) disclose your name, city, state, telephone number, e-mail address and other information without a subpoena. Without limiting the above, in an effort to respect your privacy and comply with our obligation as a good corporate citizen, we will not otherwise disclose your personal information to law enforcement or other government officials without a subpoena, court order or substantially similar legal procedure, except when we believe in good faith that the disclosure of information is necessary to: prevent imminent physical harm or financial loss; or report suspected illegal activity.</p>
 <p>Due to the existing regulatory and legal environment, we cannot ensure that all of your private communications and other personal information will never be disclosed in ways not otherwise described in this Privacy Policy. By way of example (without limiting the foregoing), we may be required to disclose personal information to the government or third parties under certain circumstances, or third parties may unlawfully intercept or access transmissions or private communications. Therefore, although we use industry standard practices to protect your privacy, we do not promise, and you should not expect, that your personal information or private communications will always remain private.</p>
 
-<h3>HOW SECURE IS INFORMATION ABOUT ME?</h3>
+<h3>How secure is information about me?</h3>
 <p>We have reasonable security measures in place to protect against loss, misuse and alteration of your information under our control. While no system is completely foolproof, we take the security of your personal information seriously, and our security measures are designed to protect that information in a responsible manner. However, you should be aware that any communication via the Internet, and security measures in connection with such communication, is not failsafe or foolproof, and there is always a possibility that data may be lost or intercepted by unauthorized parties during such transmission or after receipt. You agree that True Fabrications, Inc. shall have no liability whatsoever in connection with such lost or intercepted data.</p>
 
-<h3>E-MAIL POLICIES</h3>
+<h3>E-mail Policies</h3>
 <p>From time to time, True Fabrications, Inc. will send newsletters and other e-mail to members and others. You can always choose not to receive e-mail from True Fabrications, Inc. Each of our e-mail messages contains a link or instructions at the bottom of the e-mail for the purpose of adjusting your e-mail subscription preferences.</p>
 
-<h3>ANTI-SPAM POLICY</h3>
+<h3>Anti-Spam Policy</h3>
 <p>True Fabrications, Inc. is opposed to unsolicited commercial e-mail (“spam”). If you receive any unsolicited e-mails from spammers, please be assured that True Fabrications, Inc. did not provide your e-mail address to such parties.</p>
 <p>This does not mean that we can prevent spam from happening on the Internet. If you believe that you have received unsolicited e-mail from us, please contact <a href="mailto:consumer@truefabrications.com">consumer@truefabrications.com</a>.</p>
 
-<h3>WHAT CHOICES DO I HAVE?</h3>
+<h3>What choices do I have?</h3>
 <p>As discussed above, you can always choose not to provide information, although that might prevent us from personalizing our services for you or may prevent you from taking advantage of certain useful Site features.</p>
 
-<h3>OPT-OUT</h3>
+<h3>Opt-out</h3>
 <p>If you do not want to receive informational or promotional information from us via phone, e-mail or mail, or want to review, delete, change or modify any of your Personal Information, you may do so by sending an e-mail to <a href="mailto:consumer@truefabrications.com">consumer@truefabrications.com</a>. Please include the e-mail address you used when you registered with the Site and/or provided the information to help us verify your request.</p>
 <p>This Privacy Policy was last modified on November 17, 2014.</p>
 </section>
-</div>
+</section>
+<BR>
 </body>
