--- a/Landing Pages/terms.html
+++ b/Landing Pages/terms.html
@@ -1,5 +1,6 @@
 <head>
-<link rel="stylesheet" href="http://tf.production.na1.netsuitestaging.com/assets/tf-styles/landingPages.css"></link>
+<title>True Fabrications | Terms of Use</title>
+<link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -8,11 +9,10 @@
 <div class="tfBodyText">
 <section id="terms">
 
-<h3>NOTE:
-THIS SITE IS LOCATED IN THE UNITED STATES OF AMERICA, AND U.S. LAWS
-WILL APPLY</h3>
-<h3>ACCEPTANCE
-OF TERMS THROUGH USE</h3>
+<h2>Terms of Use</h2>
+<p><em>NOTE:
+This site is located in the United States of America, and U.S. Laws Will Apply</em></p>
+<h3>Acceptance of Terms Through Use</h3>
 <p>By
 using this site, you signify your agreement to all terms, conditions,
 and notices contained or referenced herein. If you do not agree to
@@ -24,8 +24,8 @@ reserves the right to change these Terms, and your continued use of
 the Sites constitutes agreement to all such changes. Please check the
 Terms periodically for changes.</p>
 
-<h3>LICENSE
-FOR USE OF THIS WEB SITE</h3><p>All
+<h3>License
+for Use of this Website</h3><p>All
 right, title and interest in this Web site and any content contained
 herein is the exclusive property of True Fabrications, Inc., except
 as otherwise stated. Subject to your compliance with these Terms,
@@ -83,8 +83,8 @@ such information. True Fabrications, Inc. may discontinue or change
 any product or service described in or offered on this Web site at
 any time.</p>
 
-<h3>DISCLAIMER
-OF WARRANTY AND LIMITATION OF LIABILITY</h3>
+<h3>Disclaimer
+of  Warranty and Limitation of Liability</h3>
 <p>The
 information, products and services on this Web site are provided on
 an "AS IS," and "AS AVAILABLE" basis. True
@@ -113,7 +113,7 @@ circumstances giving rise to such cause may have been within the
 control of True Fabrications, Inc. or of any vendor providing
 software or services.</p>
 
-<h3>COPYRIGHT</h3>
+<h3>Copyright</h3>
 <p>All
 content included on this site, such as text, graphics, logos, button
 icons, images, audio clips, digital downloads, data compilations, and
@@ -125,7 +125,7 @@ international copyright laws. All software used on this site is the
 property of True Fabrications, Inc. or its software suppliers and
 protected by United States and international copyright laws.</p>
 
-<h3>TRADEMARKS</h3>
+<h3>Trademarks</h3>
 <p>True
 Fabrications, True, True Zoo, Host, Twine, Foster &amp; Rye, Blush,
 Viski, all associated logos and other trademarks referenced herein
@@ -148,7 +148,7 @@ such third party, which may own the marks.</p>
 agree that you will not remove or obscure any copyright or other
 notices or legends contained in any such information.</p>
 
-<h3>LINKS</h3>
+<h3>Lnks</h3>
 <p>The
 Sites may contain links to third party websites. These links are
 provided only as a convenience. The inclusion of any link is not and
@@ -161,8 +161,8 @@ website. You should also be aware that the terms and conditions of
 such site and the site's privacy policy may be different from those
 applicable to your use of the Sites.</p>
 
-<h3>COOKIES
-AND CLEAR GIFS</h3>
+<h3>Cookies
+and Clear GIFs</h3>
 <p>We
 receive and store certain types of information whenever you interact
 with us. For example, like many Web sites, we use "cookies"
@@ -199,8 +199,8 @@ although in that case you may not be able to participate in our
 surveys or incentives, purchase products, or take advantage of
 certain useful features of the Sites.</p>
 
-<h3>TERMS
-OF PAYMENT</h3>
+<h3>Terms
+of Payment</h3>
 <p>You
 may purchase certain products or services on the Sites. In ordering
 products through the Sites or otherwise, you agree to provide only
@@ -233,8 +233,8 @@ True Fabrications, Inc.at <a href="mailto:mktg@truefabrications.com">mktg@truefa
 note that this policy applies only to products sold and shipped by
 True Fabrications, Inc.</p>
 
-<h3>INTERNATIONAL
-USE</h3>
+<h3>International
+Use</h3>
 <p>The
 Sites are controlled and operated by True Fabrications, Inc. from its
 headquarters in Seattle, Washington, United States of America. If you
@@ -246,8 +246,8 @@ site are appropriate or available for use in locations outside the
 United States, and accessing them from territories where their
 contents are illegal is prohibited.</p>
 
-<h3>LIMITATION
-OF LIABILITY</h3>
+<h3>Limitation
+of Liability</h3>
 <p>TRUE
 FABRICATIONS, INC. SHALL HAVE NO LIABILITY FOR ANY LOSS OR DAMAGE
 WHATSOEVER, INCLUDING BUT NOT LIMITED TO DIRECT, SPECIAL, INCIDENTAL,
@@ -290,7 +290,7 @@ AGREEMENT OR ANY EXCLUSIVE REMEDY.</p>
 <p>IN
 NO EVENT SHALL TRUE FABRICATIONS, INC. LIABILITY EXCEED $50.00.</p>
 
-<h3>JURISDICTION</h3>
+<h3>Jurisdiction</h3>
 <p>These
 Terms, as well as the Privacy Policy for the Sites, and any dispute
 that may arise between you and True Fabrications, Inc., shall be
@@ -327,7 +327,7 @@ it.</p>
 <p>True
 Fabrications, Inc.<br />Attn: Legal Department<br />154 N 35<sup>th</sup>Street<br />Seattle, WA 98103</p>
 
-<p>Terms of Use last modified on November 13, 2014.</p>
+<p><em>Terms of Use last modified on November 13, 2014.</em></p>
 </section>
 </div>
 </body>
