--- a/Landing Pages/about.html
+++ b/Landing Pages/about.html
@@ -1,18 +1,21 @@
 <head>
-<link rel="stylesheet" href="http://tf.production.na1.netsuitestaging.com/assets/tf-styles/landingPages.css"></link>
+<title>True Fabrications | Who We Are</title>
+<link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-<div class="tfBodyText">
-<section id="about">
-<h3>About True</h3>
-<p style="font-weight:bold;">True Fabrications was founded in 2003 by a trio of college buddies who couldn’t find a wine bag. In the space of decade, the company that began with a single humble wine bag of its own has grown to a line of thousands of products spanning every sector of the beverage industry. Apparently, those three friends weren’t the only ones looking for better drink accessories.</p>
-<p>Today True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
-<p>To top it all off, everything we do is backed by our 100% Satisfaction Guarantee. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
+<div class="tfBodyText" style="width: 100%; max-width: 800px; margin: 0px auto;">
+<section id="about" style="width: 90%; max-width: 800px, height: auto; margin-left: 5%;">
+<h2 style="text-align: center; letter-spacing: 2px">HELLO THERE</h2>
+<h3 style="font-size: 2em; line-height: 45px; text-align: center">About True Fabrications</h3>
+<p style="font-weight: bold; text-align: center">True Fabrications was founded in 2003 by a trio of college buddies who couldn’t find a wine bag. In the space of decade, the company that began with a single humble wine bag of its own has grown to a line of thousands of products spanning every sector of the beverage industry. Apparently, those three friends weren’t the only ones looking for better drink accessories.</p>
+<p style="text-align: center">Today True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
+<p style="text-align: center">To top it all off, everything we do is backed by our <strong>100% Satisfaction Guarantee</strong>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
 </p>
 </section>
 </div>
+<img src="http://twine.tf.production.na1.netsuitestaging.com/assets/images/content/banners/True_banner_AboutUs.jpg"></img>
 </body>
