--- a/Landing Pages/shipping_and_deliveries.html
+++ b/Landing Pages/shipping_and_deliveries.html
@@ -1,5 +1,6 @@
 <head>
-<link rel="stylesheet" href="http://tf.production.na1.netsuitestaging.com/assets/tf-styles/landingPages.css"></link>
+<title>True Fabrications | Shipping & Deliveries</title>
+<link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -23,13 +24,6 @@
 <p>Curious about when your order will arrive?  We ship everyting from Renton, WA, zip code 98057.  The majority of orders are shipped via UPS, unless otherwise specified, and you can check out Ground Time-in-Transit Maps here <a href="http://www.ups.com/maps/results">https://www.ups.com/maps/results</a>.</p>
 <p>Of course, we're happy to provide tracking for any order, just give us a call!</p>
 
-
-<h2 id="returns">Returns & Exchanges</h2>
-
-
-<p>We dedicate ourselves to the customer experience with a 100% Satisfaction Guarantee unmatched in the industry.  If your product was damaged in shipping, has a quality issue, or isn't selling as quickly as you'd hoped - even if you simply changed your  mind about it - we'll take it back without question and replace it with something better.  Just log into your account and fill out the return from and one of our team members will be in touch with you shortly.  If immediate assistance is more convenient for you, please feel free to chat with us live or give us a call at 800.750.8783.</p>
-<p>Please note that we take the quality of our products very seriously.  If you received a product with damage or a quality issue, we want to hear about it.  If possible, please attach a picture below to assist us in properly addressing the issue.</p>
-<br />
 </section>
 </div>
 </body>
